trying to fix bug on mobile menu

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -9,11 +9,11 @@
 }
 
 .navbar-side {
-    height: 100%;
     width: 60%;
     position: fixed;
     top: 0;
     left: 0;
+    bottom: -300px;
     padding-top: 1rem;
     background-color: $background-color;
     overflow-y: scroll;
@@ -64,10 +64,10 @@
 .overlay {
     position: fixed;
     display: none;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    top: -300px;
+    left: -300px;
+    right: -300px;
+    bottom: -300px;
     cursor: pointer;
     background-color: #ccc;
     opacity: 0.6;
